# hyper-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_atari_paper.sh  run_ddqn.py  run_ppg.py  run_ppo.py  run_procgen_paper.sh  setup.py  tuner.py  wall_clock.ipynb
config/: dqn.yaml  ppg.yaml  ppo.yaml
config/atari_paper/: euclidean.yaml  hyper_paper.yaml  hyperpp.yaml
config/encoder/: default.yaml
config/envs/dqn/: atari.yaml  minigrid.yaml
config/envs/ppo/: atari.yaml  minigrid.yaml  procgen.yaml
config/experiment/: default.yaml
config/hydra/launcher/: joblib_anakin.yaml  joblib_debug.yaml  joblib_jyn_rey.yaml  joblib_minigrid.yaml  joblib_vda.yaml
config/hydra/sweeps/: atari_seeds.yaml  minigrid_seeds.yaml  procgen_ablation.yaml  procgen_full.yaml  procgen_repro.yaml  procgen_seeds.yaml
config/hyp_layer/: default.yaml
config/manifold/: default.yaml
config/optimizer/: default.yaml
config/policy/: default.yaml
config/ppo_ablations/: euclidean_categorical.yaml  euclidean_rms.yaml  hyperpp_sn.yaml  hyperpp_sn_penultimate.yaml  procgen_hyperpp.yaml  procgen_hyperpp_ln.yaml  procgen_hyperpp_no_rms.yaml  procgen_hyperpp_nohlgauss.yaml  procgen_hyperpp_noscale.yaml  procgen_hyperpp_poincare.yaml
config/procgen_paper/: euclidean_baseline.yaml  hyper_paper.yaml  hyper_paper_noreg.yaml  hyperpp.yaml  hyperpp_scaled.yaml  hyperpp_scaledtuned.yaml
config/procgen_ppg/: euclidean_baseline.yaml  hyper_paper.yaml  hyperpp.yaml
config/value_fn/: default.yaml
src/: types.py
src/hyperbolic_math/: .gitignore  pyproject.toml  requirements.txt
src/hyperbolic_math/.github/workflows/: python-package-conda.yml
src/hyperbolic_math/src/manifolds/: hyperboloid.py
src/hyperbolic_math/src/utils/: helpers.py  horo_pca.py
src/rl/agents/: buffers.py  c51.py  ddqn.py  hl_gauss.py  networks.py  ppg_discrete.py  ppo_discrete.py  train_ddqn.py  train_ppg.py  train_ppo.py  utils.py
src/rl/environments/: __init__.py  make_functions.py  minigrid_wrappers.py  procgen_wrappers.py
src/rl/evaluation/: __init__.py  evaluation.py  logging.py
src/rl/utils/: hparam_tuner.py  model.py  serialization.py  train.py
