[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper_math"
version = "0.1.0"
authors = [
    { name="Thomas Lang", email="thomas.lang@univie.ac.at" },
    { name="Kevin Sidak", email="kevin.sidak@univie.ac.at" }
]
description = "Hyperbolic Mathematics"
requires-python = ">=3.8,<3.11"
dependencies = [
    "numpy",
    "torch",
    "scipy",
    "tqdm"
]

[project.optional-dependencies]
test = ["pytest>=8.3.3"]
dev = ["pytest>=8.3.3"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hyperbolic_test*", "manifolds*", "utils*"]

[tool.pytest.ini_options]
addopts = "-ra -q --log-cli-level=DEBUG"
testpaths = ["tests"]
pythonpath = "src"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.3"
]
